# thinking-dumps

./: .gitignore  2.18.ss  2.19.ss  2.21.ss  2.23.ss  2.32.ss  2.36.ss  2.39.ss  2.40.hs  2.5.ss  2.96.rkt  A002nat.v  A003induction.v  A004list.v  A005poly.v  A006morecoq.v  A007logic.v  A008prop.v  A008rel.v  A009prop.v  A010logic.v  A011profobj.v  A012moreind.v  A014imp.v  LICENSE  README.md  SfLib.v  emacs-config.el
agda-tutorial/: basics.agda
alg-adts/: README.md  listzipper.hs  rosezipper.hs
alg_adts/: treezipper.hs
algebraic_data_types/: README.md  listzipper.hs  treezipper.hs
arrcomp/: README  arrow.hs
automata/: Automata.hs  ContextFreeGrammar.hs  DFA.hs  DFAExample.hs  ExampleLib.hs  Homework1.hs  Homework2.hs  Input.hs  NFA.hs  RE.hs  README.md  REExample.hs  State.hs
bananas/: functor.hs
bananas-lenses-envelops-barbedwires/: db-utwente.hs
cat-code/: Adjunction.hs  Algebra.hs  Arrow.hs  Basic.hs  Lens.hs  Optics.hs  Parser.hs  ProbMonad.hs  ToyLens.hs  ToyOptics.hs  ToyOptics.lhs  Yoneda.hs
coloring/: solver.py
coroutine/: coroutine.rkt  nonblocking-return.rkt
cps/: README.md  cps.rkt
cryptocurrency/: README.md
cs231n/: .gitignore  1.1 k-Nearest Neighbor.ipynb  1.2 Linear Classifier.ipynb  common.py
ct4csist/: README.md  chap1.md  chap2.md
discrete-optimization/: README.md
discrete-optimization-1/: .gitignore
essence/: backward.hs  backward.rkt
falg/: README.md  falg.hs
fixing-gadts/: fgadts.hs
graph/: BFS.hs  BFSTest.hs  Bloxorz.hs  DFS.hs  (+4 more)
neural-nets/: Neural.hs  README.md  neural.cabal
neural-nets/src/: Neural.hs
(+419 files in other folders)
