name:                neural
version:             0.1.0.0
synopsis:            Just some stupid code
description:         Please see README.md
homepage:            http://github.com/shouya/thinking-dumps
license:             BSD3
license-file:        LICENSE
author:              Shou Ya
maintainer:          github@lain.li
copyright:           2016 Shou Ya
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable neural-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , neural
                     , vector
  default-language:    Haskell2010

test-suite neural-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neural
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/neural
